--- a/frontend/src/main/resources/static/setting_user/group_name.css
+++ b/frontend/src/main/resources/static/setting_user/group_name.css
@@ -791,6 +791,10 @@ video {
   margin-bottom: 6rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -869,6 +873,22 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-3\/4 {
+  height: 75%;
+}
+
+.h-2\/3 {
+  height: 66.666667%;
+}
+
+.h-1\/2 {
+  height: 50%;
 }
 
 .w-11\/12 {
@@ -970,6 +990,10 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .border {
